# dyno-graph-tool

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: dpr_parser.cpp  dpr_parser.h  main.cpp  torque_calc.cpp  torque_calc.h
